PlayingWithApex/force-app/main/default/objects/tps_Pizza__c/tps_Pizza__c.object-meta.xml
<CustomObject>
    <label>Pizza</label>
    <nameField>
        <displayFormat>PZ-{0000}</displayFormat>
        <label>Pizza Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pizzas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>