PlayingWithApex/force-app/main/default/objects/tps_Pizza__c/fields/tps_Price__c.field-meta.xml
<CustomField>
    <fullName>tps_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>