PlayingWithApex/force-app/main/default/objects/tps_Pizza__c/fields/tps_Sauce__c.field-meta.xml
<CustomField>
    <fullName>tps_Sauce__c</fullName>
    <defaultValue>&quot;Marinara&quot;</defaultValue>
    <label>Sauce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alfredo</fullName>
            </value>
            <value>
                <fullName>Marinara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>