PlayingWithApex/force-app/main/default/objects/tps_Pizza__c/fields/tps_Topping__c.field-meta.xml
<CustomField>
    <fullName>tps_Topping__c</fullName>
    <label>Topping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheese</fullName>
            </value>
            <value>
                <fullName>Pepperoni</fullName>
            </value>
            <value>
                <fullName>Sausage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>